--- a/src/pages/testing/defects/add-defect-category/add-defect-category.html
+++ b/src/pages/testing/defects/add-defect-category/add-defect-category.html
@@ -7,6 +7,9 @@
   <ion-toolbar>
     <ion-searchbar (ionInput)="searchList($event)"
                    [(ngModel)]="searchVal"
+                   [ngClass]="{'keep-cancel-on': focusOut}"
+                   (ionFocus)="keepCancelOn($event)"
+                   (ionCancel)="keepCancelOn($event, true)"
                    [showCancelButton]="true"
                    [cancelButtonText]="'Cancel'"
                    placeholder="Search for a defect category or IM number"
