--- a/src/pages/testing/defects/add-defect/add-defect.html
+++ b/src/pages/testing/defects/add-defect/add-defect.html
@@ -6,6 +6,9 @@
   </ion-navbar>
   <ion-toolbar>
     <ion-searchbar (ionInput)="searchList($event)"
+                   (ionFocus)="keepCancelOn($event)"
+                   (ionCancel)="keepCancelOn($event, true)"
+                   [ngClass]="{'keep-cancel-on': focusOut}"
                    [(ngModel)]="searchVal"
                    [showCancelButton]="true"
                    [cancelButtonText]="'Cancel'"
