--- a/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.html
+++ b/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.html
@@ -66,7 +66,7 @@
         </ion-row>
       </ion-grid>
     </ion-item>
-    <ion-item ion-item detail-none padding-left *ngIf="!commonFunc.checkForMatchInArray(selectedTestType.testTypeName, testsWithoutTestExpiry)">
+    <ion-item ion-item detail-none padding-left *ngIf="!commonFunc.checkForMatchInArray(selectedTestType.testTypeName, testsWithoutTestExpiry) && selectedTestType.testExpiryDate">
       <ion-grid no-padding>
         <ion-row justify-content-between>
           <ion-col col-3 text-start>
