--- a/src/pages/testing/vehicle/add-preparer/add-preparer.html
+++ b/src/pages/testing/vehicle/add-preparer/add-preparer.html
@@ -17,7 +17,7 @@
 
 <ion-content no-padding>
   <ion-list *ngIf="filteredPreparers.length > 0">
-    <button ion-item no-lines padding-left (click)="presentConfirm('Preparer ID not given')" class="min-height" *ngIf="!focusOut">
+    <button ion-item no-lines padding-left (click)="presentConfirm({preparerId: '', preparerName: 'Preparer ID not given'})" class="min-height" *ngIf="!focusOut">
       <span ion-text color="dark">No preparer ID given</span>
     </button>
     <ion-list-header text-uppercase padding-left *ngIf="!focusOut">List of preparers</ion-list-header>
@@ -38,7 +38,7 @@
       <ion-col col-8 offset-2>
         <span text-center class="no-results__title">No results found</span>
         <span text-center class="no-results__text">You can search for a preparer by its ID number</span>
-        <span text-center class="no-results__link" (click)="presentConfirm('Preparer ID not found')">Continue without preparer ID</span>
+        <span text-center class="no-results__link" (click)="presentConfirm({preparerId: '', preparerName: 'Preparer ID not found'})">Continue without preparer ID</span>
       </ion-col>
     </ion-row>
   </ion-grid>
