--- a/src/pages/testing/test-creation/complete-test/complete-test.html
+++ b/src/pages/testing/test-creation/complete-test/complete-test.html
@@ -1,4 +1,4 @@
-<ion-header [ngClass]="{'margin-top-fix': isCertificateNumberFocused}">
+<ion-header>
     <ion-navbar hideBackButton="true">
         <ion-title margin-left>
             Test type details
@@ -12,8 +12,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content class="content-background-color-grey"
-             [ngClass]="{'margin-top-fix': isCertificateNumberFocused}">
+<ion-content class="content-background-color-grey">
     <ion-list class="full-dividers-list">
 
         <ion-item text-wrap><h2 class="test-type-name">{{vehicleTest.testTypeName}}</h2></ion-item>
