--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -27,7 +27,8 @@
             <ion-input [type]="input.type"
                        [pattern]="input.type === testTypeFields.NUMBER ? patterns.NUMERIC : ''"
                        [(ngModel)]="inputValue"
-                       (ngModelChange)="valueInputChange($event)"></ion-input>
+                       (ngModelChange)="valueInputChange($event)"
+                       #valueInput></ion-input>
         </ion-item>
     </ion-item-group>
     <p class="color-grey-1" padding-left>{{input.info}}</p>
