--- a/src/pages/testing/test-creation/test-review/test-review.html
+++ b/src/pages/testing/test-creation/test-review/test-review.html
@@ -31,9 +31,9 @@
       <ion-card no-padding>
         <ion-item class="height-60">
           <ion-grid no-padding>
-            <ion-row padding-horizontal>
+            <ion-row padding-horizontal align-items-center>
               <ion-col col-8>
-                <p text-wrap
+                <p text-wrap padding-vertical
                    class="item-text-color">{{ testType.testTypeName }}</p>
               </ion-col>
               <ion-col col-4 text-right>
