--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -103,7 +103,7 @@
 </ion-content>
 
 <ion-footer>
-    <ion-toolbar>
+    <ion-toolbar class="gray-toolbar">
         <ion-buttons start>
         </ion-buttons>
         <ion-buttons end>
