--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -50,7 +50,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+  <ion-toolbar class="gray-toolbar">
     <ion-buttons class="button-centered">
       <button ion-button (click)="endVisit()" color="primary">
         End visit
