--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -6,7 +6,7 @@
       </button>
     </ion-buttons>
     <ion-title margin-left>
-      Site Visit
+      Site visit
     </ion-title>
   </ion-navbar>
 </ion-header>
