--- a/src/pages/test-station/test-station-details/test-station-details.html
+++ b/src/pages/test-station/test-station-details/test-station-details.html
@@ -29,7 +29,7 @@
       </ion-item>
       <ion-item-divider text-uppercase padding-left>Phone number</ion-item-divider>
       <ion-item padding-left class="number-custom-style">
-        <ion-label text-left (click)="callNumber()">{{ testStation.testStationContactNumber}}</ion-label>
+        <ion-label text-left (click)="callPhoneNumber()">{{ testStation.testStationContactNumber}}</ion-label>
       </ion-item>
     </ion-item-group>
 </ion-content>
